--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,9 @@ services:
         protocol: tcp
     restart: unless-stopped
     cpus: 0.2
+    cap_add:
+      - NET_ADMIN
+
     logging:
       driver: json-file
       options:
